add to local storage

--- a/solution/styles.css
+++ b/solution/styles.css
@@ -18,3 +18,10 @@ button{
       display: flex;
       flex-direction: row;
   }
+  .task{
+      cursor: pointer;
+      border: black;
+      border-radius: 5px;
+      border-width: 1px;
+      border-style: dotted;
+  }   
