--- a/solution/styles.css
+++ b/solution/styles.css
@@ -24,4 +24,8 @@ button{
       border-radius: 5px;
       border-width: 1px;
       border-style: dotted;
-  }   
+  } 
+  .draging{
+      color: blue;
+  }  
+ 
