--- a/solution/styles.css
+++ b/solution/styles.css
@@ -1,3 +1,6 @@
+body{
+    background-color: rgb(240, 238, 138);
+}
 button{
     position: relative;
     background: #fff; 
@@ -20,12 +23,71 @@ button{
   }
   .task{
       cursor: pointer;
-      border: black;
-      border-radius: 5px;
-      border-width: 1px;
-      border-style: dotted;
+      margin: 15px;
+      width: 150px;
+        height: 40px;
+        align-items: center;
+        border-width: thick;
+        border-radius: 7px;
+        border:cadetblue;
+        font-size: larger;
+        font-weight: bolder;
+        font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif ;
   } 
-  .dragging{
-      color: blue;
-  }  
+  .task:hover {
+    border-color:blueviolet;
+}
+ 
+  
+  body{
+    background-image: url("https://images.unsplash.com/photo-1543039625-14cbd3802e7d?ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8b3V0ZG9vcnxlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&w=1000&q=80");
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+
+  h1{
+      font-size: 85px;
+      color: rgba(209, 218, 230, 0.849);
+      font-weight: bolder;
+      font-style: oblique; 
+      margin-right: 450px;
+      margin-top: 100px;
+  }
+  section{
+      
+      font-size: 30px;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-around;
+      align-items: center;
+      background-color: rgba(238, 166, 166, 0.486);
+      overflow: auto;
+      margin: 100px;
+      padding: 10px;
+      border: none;
+      border-radius: 10px;
+      box-shadow: 0px 5px 80px 0px #26252770;
+    }
+    
+    
+    Input {
+        border-radius: 7px;
+        background-color: rgb(241, 246, 247);
+    }
+    .container{
+        display: flex;
+        align-items: center;
+    }
+    #search{
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        color: cornsilk;
+        width: 500px;
+        height: 40px;
+    }
+    
+   
  
